--- a/src/components/HeroSection.module.css
+++ b/src/components/HeroSection.module.css
@@ -1,5 +1,9 @@
 .heroContainer {
-    background-color: #f0f0f0;
+    /* background-color: #f0f0f0; */
+    background-color: #000000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: 100px 20px;
     text-align: center;
     color: #000000;
@@ -8,17 +12,22 @@
   .heroTitle {
     font-size: 3rem;
     margin-bottom: 20px;
+    color: white; /* Change text color to white */
+    font-weight: bold; 
   }
   
   .heroImage {
-    max-width: 100%;
+    /* max-width: 100%; */
+    width: 250px;
     height: auto;
-    margin-bottom: 20px;
+    margin-bottom: 20px;  
   }
   
   .heroSubtitle {
     font-size: 1.5rem;
     margin-bottom: 40px;
+    color: white; /* Change text color to white */
+    font-weight: bold; 
   }
   
   .heroButton {
