--- a/src/components/css/DataFetcher.module.css
+++ b/src/components/css/DataFetcher.module.css
@@ -51,7 +51,7 @@
 .button {
   padding: 10px 20px;
   font-size: 16px;
-  width: 150px; /* Fixed width for consistency */
+  width: 200px; /* Fixed width for consistency */
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -73,7 +73,7 @@
 .resetButton {
   padding: 10px 20px;
   font-size: 16px;
-  width: 150px;
+  width: 200px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -90,7 +90,7 @@
 .exportButton {
   padding: 10px 20px;
   font-size: 16px;
-  width: 150px;
+  width: 200px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -107,6 +107,23 @@
 .exportButton:disabled {
   background-color: #cccccc;
   cursor: not-allowed;
+}
+
+.visualiseGraphButton{
+  padding: 10px 20px;
+  font-size: 16px;
+  width: 200px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: background-color 0.2s;
+  background-color: #e794be; /* Pink */
+  color: black;
+}
+
+.visualiseGraphButton:hover {
+  background-color: #e56f9f; /* Darker pink */
 }
 
 .presetContainer {
@@ -133,6 +150,7 @@
 .presetButton:hover {
   background-color: #32cd32;
 }
+
 
 .errorMessage {
   color: red;
